# slowrm

./: .gitignore  README.md  compose.yaml  ipm.json
docs/: index.html
ignition/global/: project.json
ignition/global/ignition/global-props/: resource.json
ignition/global/ignition/message/asdf/: handleMessage.py  resource.json
ignition/global/ignition/script-python/base/: resource.json
ignition/global/ignition/script-python/dept/: code.py  resource.json
ignition/global/ignition/script-python/lineitem/: code.py  resource.json
ignition/global/ignition/script-python/shirt/: code.py  resource.json
ignition/global/ignition/script-python/slowrm/: code.py  resource.json
ignition/global/ignition/script-python/workorder/: code.py  resource.json
ipm/slowrm/: pyproject.toml
ipm/slowrm/src/slowrm/: __init__.py
