[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slowrm"
version = "0.0.0"
description = "A lightweight ORM for Ignition. SQLAlchemy Core + declarative models + Ignition's system.db."
keywords = ["jython", "ignition", "ignition-8.3", "ipm", "orm"]
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: Implementation :: Jython",
]

dependencies = [
    "SQLAlchemy==1.3.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slowrm"]
